[gd_scene load_steps=15 format=3 uid="uid://dk1yrlfsgmprx"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_mjyse"]
[ext_resource type="Texture2D" uid="uid://8l2nxj1rqc36" path="res://backgrounds/STB_parallax_background.png" id="1_t82k7"]
[ext_resource type="PackedScene" uid="uid://dkyn4mwiaokpl" path="res://scenes/level_1.tscn" id="2_6c5vh"]
[ext_resource type="Texture2D" uid="uid://bppsiolytg5fe" path="res://UI/title_STB.png" id="2_g5fs8"]
[ext_resource type="Script" path="res://scripts/title_moving_parallax_background.gd" id="3_gi0mj"]
[ext_resource type="Texture2D" uid="uid://buvum3pdjxbfp" path="res://UI/button_rectangle_depth_border.png" id="4_71gsj"]
[ext_resource type="Texture2D" uid="uid://dpgwelbmufmqk" path="res://UI/button_rectangle_gloss.png" id="5_1136d"]
[ext_resource type="Texture2D" uid="uid://cn2fl2bjywgfl" path="res://UI/button_rectangle_depth_gloss.png" id="6_rhhmc"]
[ext_resource type="AudioStream" uid="uid://dw10l56mnuvov" path="res://sounds/audio_hero_Toys-On-Parade_SIPML_Q-0240.mp3" id="8_qvbyc"]
[ext_resource type="FontFile" uid="uid://ba1rok5vimfsm" path="res://fonts/Dimbo Regular.ttf" id="9_x8ypo"]

[sub_resource type="Animation" id="Animation_p0rwe"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeOverlay:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_m114k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeOverlay:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoundTrack:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-10.0]
}

[sub_resource type="Animation" id="Animation_2glhw"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeOverlay:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoundTrack:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oljjw"]
_data = {
"RESET": SubResource("Animation_m114k"),
"fade_in": SubResource("Animation_p0rwe"),
"fade_out": SubResource("Animation_2glhw")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_mjyse")
level_scene = ExtResource("2_6c5vh")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("3_gi0mj")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(2048, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1024, 540)
texture = ExtResource("1_t82k7")

[node name="Background" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_top = -400.0
offset_right = 2048.0
offset_bottom = 1648.0
texture = ExtResource("1_t82k7")

[node name="TitleLogo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 422.0
offset_right = 1766.0
offset_bottom = 768.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_g5fs8")
expand_mode = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 810.0
offset_top = 520.0
offset_right = 1110.0
offset_bottom = 828.0

[node name="PlayButton" type="TextureButton" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_71gsj")
texture_pressed = ExtResource("5_1136d")
texture_hover = ExtResource("6_rhhmc")
texture_disabled = ExtResource("4_71gsj")
texture_focused = ExtResource("6_rhhmc")
stretch_mode = 0

[node name="PlayLabel" type="Label" parent="MenuContainer/PlayButton"]
layout_mode = 0
offset_left = 2.0
offset_top = -5.0
offset_right = 299.0
offset_bottom = 98.0
theme_override_colors/font_outline_color = Color(0.94902, 0.207843, 0.32549, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("9_x8ypo")
theme_override_font_sizes/font_size = 42
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_71gsj")
texture_pressed = ExtResource("5_1136d")
texture_hover = ExtResource("6_rhhmc")
texture_disabled = ExtResource("4_71gsj")
texture_focused = ExtResource("6_rhhmc")
stretch_mode = 0

[node name="QuitLabel" type="Label" parent="MenuContainer/QuitButton"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 299.0
offset_bottom = 99.0
theme_override_colors/font_outline_color = Color(0.94902, 0.207843, 0.32549, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("9_x8ypo")
theme_override_font_sizes/font_size = 42
text = "QUIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PortfolioButton" type="TextureButton" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_71gsj")
texture_pressed = ExtResource("5_1136d")
texture_hover = ExtResource("6_rhhmc")
texture_disabled = ExtResource("4_71gsj")
texture_focused = ExtResource("6_rhhmc")
stretch_mode = 0

[node name="PortfolioLabel" type="Label" parent="MenuContainer/PortfolioButton"]
layout_mode = 0
offset_top = -4.0
offset_right = 297.0
offset_bottom = 99.0
theme_override_colors/font_outline_color = Color(0.94902, 0.207843, 0.32549, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("9_x8ypo")
theme_override_font_sizes/font_size = 42
text = "PORTFOLIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oljjw")
}

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="SoundTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qvbyc")
volume_db = -10.0
autoplay = true
